[tool.poetry]
name = "moonbag"
version = "0.1.0"
description = "MoonBag - Crypto CLI that will help you explore crypto world."
authors = ["jp <plutakuba@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1"
numpy = "^1.20.2"
pandas = "^1.2.4"
pycoingecko = "^2.0.0"
retry = "^0.9.2"
requests = "^2.25.1"
bs4 = "^0.0.1"
cachetools = "^4.2.2"
python-dotenv = "^0.17.1"
tabulate = "^0.8.9"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
