[tool.poetry]
name = "moonbag"
version = "0.1.0"
description = "Moonbag is command line application that helps to explore crypto trends, coin prices, exchanges and many others."
authors = ["jakub <plutakuba@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
pycoingecko = "^2.0.0"
requests = "^2.25.1"
pandas = "^1.2.4"
python-dotenv = "^0.17.1"
numpy = "^1.20.3"
retry = "^0.9.2"
lxml = "^4.6.3"
bs4 = "^0.0.1"
cachetools = "^4.2.2"
tabulate = "^0.8.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
